# flask-audit-log

./: README.md  pyproject.toml
audit_logger/: __init__.py  attributes.py  base.py  config.py  request.py  response.py
docs/source/: conf.py  index.rst
examples/: class_based_view.py  function_based_view.py
src/audit_logger/: __init__.py  base.py  request.py  response.py
src/flask_auditor/: __init__.py  attributes.py  config.py  request.py
tests/: conftest.py  test_config.py  test_flask_auditor.py  test_request_logger.py  test_response_logger.py
